crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__Django__5.1.15__django__contrib__admin__templatetags__admin_urls.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/5.1.15/django/contrib/admin/templatetags/admin_urls.py
---
tag_rules:
  "django.contrib.admin.templatetags.admin_urls::add_preserved_filters":
    arg_constraints:
      - Min: 2
      - Max: 4
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: url
        required: true
        kind: Variable
        position: 0
      - name: popup
        required: false
        kind: Variable
        position: 1
      - name: to_field
        required: false
        kind: Variable
        position: 2
    supports_as_var: true
filter_arities:
  "django.contrib.admin.templatetags.admin_urls::admin_urlname":
    expects_arg: true
    arg_optional: false
  "django.contrib.admin.templatetags.admin_urls::admin_urlquote":
    expects_arg: false
    arg_optional: false
block_specs: {}
